Utilizar constantes para passar/recurepar a informação entre atividades

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
         android:layout_weight="1"
         android:ems="10"
         android:hint="@string/mensagem"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/buttonEnviar"
