Data e hora OK!

--- a/app/src/main/res/layout/activity_mostra_mensagem.xml
+++ b/app/src/main/res/layout/activity_mostra_mensagem.xml
@@ -17,10 +17,17 @@
         android:textColor="@color/purple_500" />
 
     <TextView
+        android:id="@+id/textViewData"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:layout_margin="8dp" />
+
+    <TextView
         android:id="@+id/textViewMensagem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         tools:text="Olá mundo" />
+
 </LinearLayout>
