--- a/app/src/main/res/layout/activity_mostra_mensagem.xml
+++ b/app/src/main/res/layout/activity_mostra_mensagem.xml
@@ -20,7 +20,8 @@
         android:id="@+id/textViewData"
         android:layout_width="match_parent"
         android:layout_height="34dp"
-        android:layout_margin="8dp" />
+        android:layout_margin="8dp"
+        android:gravity="right" />
 
     <TextView
         android:id="@+id/textViewMensagem"
